--- a/__LAYOUT-TEMPLATE.pug
+++ b/__LAYOUT-TEMPLATE.pug
@@ -14,4 +14,5 @@ html.no-js(lang='en')
 
     a#scrollUp(href="#", title="Back to top")
     script(src='js/min/app-min.js')
-    script(src='node_modules/slick-carousel/slick/slick.min.js')
+
+    block extraScripts
