--- a/home-header-modal-test.pug
+++ b/home-header-modal-test.pug
@@ -1,60 +1,58 @@
 extend __LAYOUT-TEMPLATE.pug
+include ../../_COG-Framework-2020/pug/_navigation.pug
+include ../../_COG-Framework-2020/pug/_footer.pug
 
 block vars
   - var pageTitle = "CHANGE_ME"
   - var siteURL = "https://www.dannylewandowski.com/_cog-DEV/_PROTOTYPING/Components/_BUILD/"
 
 block content
-  //- h1!= pageTitle
-  //- .text-center.bg-gray-light
-  //-   img(src="images/nav-secondary.jpg")
-  //- .text-center
-  //-   img(src="images/nav-primary.jpg")
-  //- .align-middle.text-center.medium-text-left.video-background.bg-pos-center-center(data-interchange="[images/video-backgrounds/ie-bg.jpg, small],[images/video-backgrounds/ie-bg.jpg, medium],[../images/transparent.gif, large]")
-    video.hide-for-small-only#video-in-place-3(data-toggler=".hide" playsinline autoplay loop muted poster="images/video-backgrounds/ie-bg.jpg")
-      source(src="images/video-backgrounds/ie-bg.mp4" type="video/mp4")
-    .grid-container#video-in-place-1(data-toggler=".hide")
-      .grid-x.grid-padding-x.align-middle.py5.medium-h80vh
-        .cell.medium-auto.medium-offset-1
-          h1.lh1 Intuition engineered
-          p With IoT, Al, software and cloud, Cognizant engineers businesses to anticipate expectations and act instantly.
-        .cell.medium-auto
-          a.text-white.super-size.link-coverAll(data-toggle="video-in-place-1 video-in-place-2 video-in-place-3")
-            i.play-button.text-center
-              p.text-heavy.tiny.mt1 WATCH NOW
-    .hide.bg-black.py4.medium-py2#video-in-place-2(data-toggler=".hide")
-      .grid-container
-        button.close-button(aria-label="Close alert", type="button", data-close="")
-          span(aria-hidden="true" data-toggle="video-in-place-1 video-in-place-2 video-in-place-3") &times;
-        .grid-x.grid-padding-x
-          .cell
-            .responsive-embed.widescreen
-              iframe(src="https://www.youtube.com/embed/496vDXsr9fw" frameborder="0" allowfullscreen)
-          .cell.text-center.flex-container.align-center-middle
-            a.small.mr2(href="#" data-toggle="video-in-place-1 video-in-place-2 video-in-place-3") CLOSE
-            a.button.arrow.m0(href="#") LEARN MORE
+  +subnav(class="theme-default")
+  +primaryNav(class="theme-default")
 
-  //- .my6
-  .grid-container.text-center.bg-gray-light
-    img(src="images/ie-page.jpg")
-  a.button.white.arrow(data-open="video-modal-ie") play video
-  .reveal#video-modal-ie(data-reveal data-animation-in="scale-in-up" data-animation-out="scale-out-down")
-    .grid-container.fluid.bg-size-cover#video-in-place-1b(data-toggler=".hide" style="background:url(images/ie-modal-bg.jpg)")
-      .grid-x.grid-padding-x.align-center-middle.px2.py5.medium-h80vh
-        .cell.medium-9.text-white
+  //- ======================================================================
+  //- ██ ███████     ███    ███  ██████  ██████   █████  ██
+  //- ██ ██          ████  ████ ██    ██ ██   ██ ██   ██ ██
+  //- ██ █████       ██ ████ ██ ██    ██ ██   ██ ███████ ██
+  //- ██ ██          ██  ██  ██ ██    ██ ██   ██ ██   ██ ██
+  //- ██ ███████     ██      ██  ██████  ██████  ██   ██ ███████
+  //- ======================================================================
+  .reveal.flex-container.align-center-middle#video-modal-ie(data-reset-on-close="true" data-reveal data-animation-in="scale-in-up" data-animation-out="scale-out-down")
+    .bg-size-cover.min-h70vh#ie-modal-static(data-toggler=".hide" style="background:url(images/ie-modal-bg.jpg)")
+      .grid-x.grid-padding-x.align-center-middle
+        .cell.medium-9.text-white.text-center.medium-text-left
           h2.h1.lh1 Now, intuition can be engineered.
-        .cell.medium-3
-          a.text-white.super-size.link-coverAll(data-toggle="video-in-place-1b video-in-place-2b video-in-place-3b")
-            i.play-button.text-center
-              p.text-heavy.tiny.mt1 WATCH NOW
-    .hide.bg-black.py6.medium-py2#video-in-place-2b(data-toggler=".hide")
-      .grid-container
-        .grid-x.grid-padding-x
-          .cell
-            .responsive-embed.widescreen
-              iframe(src="https://www.youtube.com/embed/496vDXsr9fw?modestbranding=1&rel=0" frameborder="0" allowfullscreen)
-          .cell.text-center.flex-container.align-center-middle
-            a.small.mr2(href="#" data-toggle="video-in-place-1b video-in-place-2b video-in-place-3b") CLOSE
-            a.button.arrow.m0(href="#") LEARN MORE
-    button.close-button(data-close aria-label="Close modal" type="button")
+        .cell.medium-3.flex-container.align-center.large-align-left
+          a.open-button-trigger.text-white.text-center.link-coverAll(data-toggle="ie-modal-static ie-modal-video")
+            i.play-button.super-size
+            .text-heavy.tiny.mt1 WATCH NOW
+    .grid-container.align-center-middle.w100.hide.bg-black.min-h70vh#ie-modal-video(data-toggler=".hide")
+      .grid-x.w100
+        .cell
+          .responsive-embed.widescreen.m0
+            iframe#youtube-video(src="https://www.youtube.com/embed/496vDXsr9fw?enablejsapi=1&showinfo=0&modestbranding=1&wmode=transparent&controls=1&autohide=1&rel=0" autoplay="1" frameborder="0" allowfullscreen)
+        .cell.text-center.pt1
+          .grid-x.align-center-middle.w100
+            .cell.large-shrink.small-order-2.large-order-1.mt1.large-mt0.large-mr1
+              a.close-button-trigger.small(href="#" data-toggle="ie-modal-static ie-modal-video") CLOSE
+            .cell.large-shrink.small-order-1.large-order-2
+              a.button.arrow.m0(href="#") EXPERIENCE MORE
+    button.close-button.close-button-trigger(data-close aria-label="Close modal" type="button")
       span(aria-hidden="true") &times;
+
+  .w100vw.h100vh.flex-container.align-center-middle
+    a.button.white.arrow(data-open="video-modal-ie") OPEN MODAL
+
+  block extraScripts
+    script.
+      $(document).ready(function() {
+        $('#video-modal-ie').foundation('open');
+      });
+
+      $('.open-button-trigger').click(function(){
+        $('#youtube-video').attr('src', 'https://www.youtube.com/embed/496vDXsr9fw?enablejsapi=1&showinfo=0&modestbranding=1&wmode=transparent&controls=1&autohide=1&rel=0&autoplay=1&autoplay=1')
+      });
+
+      $('.close-button-trigger').click(function(){
+        $('#youtube-video').attr('src', 'https://www.youtube.com/embed/496vDXsr9fw?enablejsapi=1&showinfo=0&modestbranding=1&wmode=transparent&controls=1&autohide=1&rel=0')
+      });
