html src updated

--- a/home-header-modal-test.pug
+++ b/home-header-modal-test.pug
@@ -30,7 +30,7 @@ block content
       .grid-x.w100
         .cell
           .responsive-embed.widescreen.m0
-            iframe#youtube-video(src="https://www.youtube.com/embed/496vDXsr9fw?enablejsapi=1&showinfo=0&modestbranding=1&wmode=transparent&controls=1&autohide=1&rel=0" autoplay="1" frameborder="0" allowfullscreen)
+            iframe#youtube-video(src="" autoplay="1" frameborder="0" allowfullscreen)
         .cell.text-center.pt1
           .grid-x.align-center-middle.w100
             .cell.large-shrink.small-order-2.large-order-1.mt1.large-mt0.large-mr1
