--- a/home-header-modal-test.pug
+++ b/home-header-modal-test.pug
@@ -17,7 +17,7 @@ block content
   //- ██ ██          ██  ██  ██ ██    ██ ██   ██ ██   ██ ██
   //- ██ ███████     ██      ██  ██████  ██████  ██   ██ ███████
   //- ======================================================================
-  .reveal.flex-container.align-center-middle#video-modal-ie(data-reset-on-close="true" data-reveal data-animation-in="scale-in-up" data-animation-out="scale-out-down")
+  .reveal.flex-container.align-center-middle#video-modal-ie(data-reset-on-close="true" data-reveal )
     .bg-size-cover.min-h70vh#ie-modal-static(data-toggler=".hide" style="background:url(images/ie-modal-bg.jpg)")
       .grid-x.grid-padding-x.align-center-middle
         .cell.medium-9.text-white.text-center.medium-text-left
@@ -41,7 +41,7 @@ block content
       span(aria-hidden="true") &times;
 
   .w100vw.h100vh.flex-container.align-center-middle
-    a.button.white.arrow(data-open="video-modal-ie") OPEN MODAL
+    a.open-button-trigger.button.white.arrow(data-open="video-modal-ie") OPEN MODAL
 
   block extraScripts
     script.
@@ -49,20 +49,29 @@ block content
         $('#video-modal-ie').foundation('open');
       });
 
-      var youtube_link = 'https://www.youtube.com/embed/496vDXsr9fw'
+      $(document).on("closed.zf.reveal", function(){
+        srcReplace(youtubeNoAutoplay)
+      });
 
-      var youtube_autoplay = youtube_link + '?enablejsapi=1&showinfo=0&modestbranding=1&wmode=transparent&controls=1&autohide=1&rel=0&autoplay=1&autoplay=1'
+      var youtubeUrl = 'https://www.youtube.com/embed/496vDXsr9fw'
 
-      var youtube_no_autoplay = youtube_link + '?enablejsapi=1&showinfo=0&modestbranding=1&wmode=transparent&controls=1&autohide=1&rel=0'
+      var youtubeAutoplay = youtubeUrl + '?enablejsapi=1&showinfo=0&modestbranding=1&wmode=transparent&controls=1&autohide=1&rel=0&autoplay=1&autoplay=1'
+
+      var youtubeNoAutoplay = youtubeUrl + '?enablejsapi=1&showinfo=0&modestbranding=1&wmode=transparent&controls=1&autohide=1&rel=0'
+
+      var srcReplace = function (youtubePlay){
+        $('#youtube-video').attr('src', youtubePlay)
+      }
 
       $('.open-button-trigger').click(function(){
-        $('#youtube-video').attr('src', youtube_autoplay)
+        srcReplace(youtubeAutoplay)
       });
 
       $('.close-button-trigger').click(function(){
-        $('#youtube-video').attr('src', youtube_no_autoplay);
+        srcReplace(youtubeNoAutoplay)
+
       });
 
-      $(document).on("closed.zf.reveal", function(){
-        $('#youtube-video').attr('src', youtube_no_autoplay)
-        });
+   
+
+      //- data-animation-in="scale-in-up" data-animation-out="scale-out-down"
