Header video and modal test

--- a/home-header-modal-test.pug
+++ b/home-header-modal-test.pug
@@ -45,24 +45,26 @@ block content
 
   block extraScripts
     script.
+      var youtubeUrl = 'https://www.youtube.com/embed/496vDXsr9fw'
+      var youtubeAutoplay = youtubeUrl + '?enablejsapi=1&showinfo=0&modestbranding=1&wmode=transparent&controls=1&autohide=1&rel=0&autoplay=1&autoplay=1'
+      var youtubeNoAutoplay = youtubeUrl + '?enablejsapi=1&showinfo=0&modestbranding=1&wmode=transparent&controls=1&autohide=1&rel=0'
+
+      var srcReplace = function (youtubePlay){
+        $('#youtube-video').attr('src', youtubePlay)
+      }
+
       $(document).ready(function() {
         $('#video-modal-ie').foundation('open');
       });
 
-      var youtube_link = 'https://www.youtube.com/embed/496vDXsr9fw'
-
-      var youtube_autoplay = youtube_link + '?enablejsapi=1&showinfo=0&modestbranding=1&wmode=transparent&controls=1&autohide=1&rel=0&autoplay=1&autoplay=1'
-
-      var youtube_no_autoplay = youtube_link + '?enablejsapi=1&showinfo=0&modestbranding=1&wmode=transparent&controls=1&autohide=1&rel=0'
+      $(document).on("closed.zf.reveal", function(){
+        srcReplace(youtubeNoAutoplay)
+      });
 
       $('.open-button-trigger').click(function(){
-        $('#youtube-video').attr('src', youtube_autoplay)
+        srcReplace(youtubeAutoplay)
       });
 
       $('.close-button-trigger').click(function(){
-        $('#youtube-video').attr('src', youtube_no_autoplay);
+        srcReplace(youtubeNoAutoplay)
       });
-
-      $(document).on("closed.zf.reveal", function(){
-        $('#youtube-video').attr('src', youtube_no_autoplay)
-        });
