Headline weight changed to light

--- a/home-header-video-test.pug
+++ b/home-header-video-test.pug
@@ -16,7 +16,7 @@ block content
     .grid-container.fluid#ie-video-banner-static(data-toggler=".hide")
       .grid-x.grid-padding-x.align-middle.py5.medium-py0.medium-px2.medium-min-h80vh
         .cell.medium-auto.text-white
-          h1.super-size.lh1.mb2 Now, intuition can be engineered.
+          h1.super-size.lh1.mb2.text-light Now, intuition can be engineered.
           h5.text-normal(style="max-width: 50ch;") With expertise in AI, IoT, software and cloud, Cognizant engineers businesses to act with the insight and speed of human intuition.
         .cell.medium-2.flex-container.align-center.large-align-left
           a.open-button-trigger.text-white.text-center.link-coverAll(data-toggle="ie-video-banner-static ie-video-banner-youtube ie-video-banner-bg")
