--- a/home-header-modal-test.pug
+++ b/home-header-modal-test.pug
@@ -21,7 +21,7 @@ block content
     .bg-size-cover.min-h70vh#ie-modal-static(data-toggler=".hide" style="background:url(images/ie-modal-bg.jpg)")
       .grid-x.grid-padding-x.align-center-middle
         .cell.medium-9.text-white.text-center.medium-text-left
-          h2.h1.lh1 Now, intuition can be engineered.
+          h2.h1.lh1.text-light Now, intuition can be engineered.
         .cell.medium-3.flex-container.align-center.large-align-left
           a.open-button-trigger.text-white.text-center.link-coverAll(data-toggle="ie-modal-static ie-modal-video")
             i.play-button.super-size
