--- a/__LAYOUT-TEMPLATE.pug
+++ b/__LAYOUT-TEMPLATE.pug
@@ -8,6 +8,8 @@ html.no-js(lang='en')
     title!= 'Cognizant | ' + pageTitle
     link(rel='stylesheet', href='css/app.css')
 
+    block extraStyles
+
   body
 
     block content
