--- a/home-header-modal-test.pug
+++ b/home-header-modal-test.pug
@@ -6,6 +6,27 @@ block vars
   - var pageTitle = "CHANGE_ME"
   - var siteURL = "https://www.dannylewandowski.com/_cog-DEV/_PROTOTYPING/Components/_BUILD/"
 
+block extraStyles
+  style.
+    /* @media screen and (min-width: 0em) and (orientation:portrait) {
+      iframe#youtube-video {
+        width: calc(100vw - 2rem); 
+        height: 25vh;
+      }
+    }
+    @media screen and (min-width: 40em) and (orientation:portrait) {
+      iframe#youtube-video {
+        width: calc(100vw - 2rem); 
+        height: 40vh;
+      }
+    }
+    @media screen and (min-width: 64em) {
+      iframe#youtube-video {
+        width: calc(75vh * 1.77); 
+        height: 82.5vh;
+      }
+    } */
+
 block content
   +subnav(class="theme-default")
   +primaryNav(class="theme-default")
@@ -17,26 +38,26 @@ block content
   //- ██ ██          ██  ██  ██ ██    ██ ██   ██ ██   ██ ██
   //- ██ ███████     ██      ██  ██████  ██████  ██   ██ ███████
   //- ======================================================================
-  .reveal.flex-container.align-center-middle#video-modal-ie(data-reset-on-close="true" data-reveal data-animation-in="scale-in-up" data-animation-out="scale-out-down")
-    .bg-size-cover.min-h70vh#ie-modal-static(data-toggler=".hide" style="background:url(images/ie-modal-bg.jpg)")
+  .relative.reveal.min-h80vh.flex-container.align-stretch#video-modal-ie(data-reset-on-close="true" data-reveal data-animation-in="scale-in-up" data-animation-out="scale-out-down")
+    .bg-size-cover.flex-container.align-middle#ie-modal-static(data-toggler=".hide" style="background:url(images/ie-modal-bg.jpg)")
       .grid-x.grid-padding-x.align-center-middle
         .cell.medium-9.text-white.text-center.medium-text-left
           h2.h1.lh1.text-light Now, intuition can be engineered.
-        .cell.medium-3.flex-container.align-center.large-align-left
+        .cell.medium-3.flex-container.flex-dir-column.align-center.large-align-left.text-center
           a.open-button-trigger.text-white.text-center.link-coverAll(data-toggle="ie-modal-static ie-modal-video")
             i.play-button.super-size
-            .text-heavy.tiny.mt1 WATCH NOW
-    .grid-container.align-center-middle.w100.hide.bg-black.min-h70vh#ie-modal-video(data-toggler=".hide")
-      .grid-x.w100
-        .cell
-          .responsive-embed.widescreen.m0
-            iframe#youtube-video(src="" autoplay="1" frameborder="0" allowfullscreen)
-        .cell.text-center.pt1
-          .grid-x.align-center-middle.w100
-            .cell.large-shrink.small-order-2.large-order-1.mt1.large-mt0.large-mr1
-              a.close-button-trigger.small(data-close data-toggle="ie-modal-static ie-modal-video") CLOSE
-            .cell.large-shrink.small-order-1.large-order-2
-              a.button.arrow.m0(href="#") EXPERIENCE MORE
+            .text-heavy.my1 WATCH NOW
+          p.text-white.type-sidelines
+            span OR
+          a.arrow.white.hollow.blue-bright-hover.block.z2(href="#") EXPERIENCE MORE
+    .grid-container.align-stretch.w100.hide#ie-modal-video(data-toggler=".hide")
+      .flex-container.flex-dir-column.align-center.h100
+        iframe#youtube-video.mb1.wh100(src="" autoplay="1" frameborder="0" allowfullscreen )
+        .grid-container.grid-x.grid-padding-x.align-center-middle.text-center
+          .cell.large-shrink.small-order-2.large-order-1.large-mt0.large-mr1
+            a.close-button-trigger.small(data-close) CLOSE
+          .cell.large-shrink.small-order-1.large-order-2
+            a.button.small.arrow.m0(href="#") EXPERIENCE MORE
     button.close-button.close-button-trigger(data-close aria-label="Close modal" type="button" data-toggle="ie-modal-static ie-modal-video")
       span(aria-hidden="true") &times;
 
