side lines tweak

--- a/home-header-video-test.pug
+++ b/home-header-video-test.pug
@@ -43,8 +43,7 @@ block content
           a.open-button-trigger.text-white.text-center.link-coverAll.mb1.blue-bright-hover(data-open="ie-videoReveal")
             i.play-button.super-size
             .text-heavy.mt1 WATCH NOW
-          p.text-white.type-sidelines
-            span OR
+          p.text-white.sidelines.white OR
           a.arrow.white.hollow.blue-bright-hover.block.z2(href="#") EXPERIENCE MORE
 
   #ie-videoReveal.reveal.full.text-center.align-middle(data-reveal data-animation-in="slide-in-up" data-animation-out="slide-out-down")
