--- a/home-header-modal-test.pug
+++ b/home-header-modal-test.pug
@@ -47,8 +47,7 @@ block content
           a.open-button-trigger.text-white.text-center.link-coverAll(data-toggle="ie-modal-static ie-modal-video")
             i.play-button.super-size
             .text-heavy.my1 WATCH NOW
-          p.text-white.type-sidelines
-            span OR
+          p.text-white.sidelines OR
           a.arrow.white.hollow.blue-bright-hover.block.z2(href="#") EXPERIENCE MORE
     .grid-container.align-stretch.w100.hide#ie-modal-video(data-toggler=".hide")
       .flex-container.flex-dir-column.align-center.h100
