video play/close

--- a/home-header-modal-test.pug
+++ b/home-header-modal-test.pug
@@ -46,8 +46,8 @@ block content
         .cell.medium-3.flex-container.flex-dir-column.align-center.large-align-left.text-center
           a.open-button-trigger.text-white.text-center.link-coverAll(data-toggle="ie-modal-static ie-modal-video")
             i.play-button.super-size
-            .text-heavy.my1 WATCH NOW
-          p.text-white.sidelines OR
+            .text-bold.my1 WATCH NOW
+          p.text-italic.text-white.sidelines.white or
           a.arrow.white.hollow.blue-bright-hover.block.z2(href="#") EXPERIENCE MORE
     .grid-container.align-stretch.w100.hide#ie-modal-video(data-toggler=".hide")
       .flex-container.flex-dir-column.align-center.h100
