content width adjustment

--- a/home-header-video-test.pug
+++ b/home-header-video-test.pug
@@ -34,12 +34,12 @@ block content
   .align-middle.text-center.medium-text-left.video-background.bg-pos-center-center(data-interchange="[images/video-backgrounds/ie-bg.jpg, small],[../images/transparent.gif, medium],[../images/transparent.gif, large]")
     video.hide-for-small-only(playsinline autoplay loop muted poster="images/video-backgrounds/ie-bg.jpg")
       source(src="images/video-backgrounds/ie-bg.mp4" type="video/mp4")
-    .grid-container.fluid
-      .grid-x.grid-padding-x.align-middle.py5.medium-py0.medium-px2.medium-min-h80vh
+    .grid-container
+      .grid-x.grid-padding-x.align-middle.py5.medium-py0.px1.xlarge-px0.medium-min-h80vh
         .cell.medium-auto.text-white
           h1.lh1.mb2.text-light.extra-large Now, intuition can be engineered.
           h5.text-normal(style="max-width: 50ch;") With expertise in AI, IoT, software and cloud, Cognizant engineers businesses to act with the insight and speed of human intuition.
-        .cell.medium-2.flex-container.flex-dir-column.align-center.large-align-left.text-center
+        .cell.medium-3.flex-container.flex-dir-column.align-center.large-align-left.text-center
           a.open-button-trigger.text-white.text-center.link-coverAll.mb1.blue-bright-hover(data-open="ie-videoReveal")
             i.play-button.super-size
             .text-bold.mt1 WATCH NOW
